[gd_scene load_steps=5 format=3 uid="uid://4qg3khchlk33"]

[ext_resource type="Theme" uid="uid://bv4t2yd3j2gp0" path="res://new_theme.tres" id="1_6k0mq"]
[ext_resource type="Script" path="res://button.gd" id="1_x3dbt"]
[ext_resource type="Script" path="res://control.gd" id="2_54uei"]
[ext_resource type="PackedScene" uid="uid://ktm7k0co2o7l" path="res://addons/mqtt/mqtt.tscn" id="3_6am8h"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6k0mq")
script = ExtResource("2_54uei")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "消息窗口"
initial_position = 1
size = Vector2i(200, 100)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 354.0
offset_right = 377.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 64
text = "点击我"
script = ExtResource("1_x3dbt")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 41.0
offset_right = 1724.0
offset_bottom = 569.0
theme_override_font_sizes/font_size = 32

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 125.0
offset_right = 188.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 99
text = "0"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="MQTT" parent="." instance=ExtResource("3_6am8h")]

[node name="CodeEdit" type="CodeEdit" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 655.0
offset_right = 1721.0
offset_bottom = 1150.0
placeholder_text = "内容"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="timeout" from="Timer" to="Button" method="_on_timer_timeout"]
[connection signal="broker_connected" from="MQTT" to="Button" method="_on_mqtt_broker_connected"]
[connection signal="broker_connection_failed" from="MQTT" to="Button" method="_on_mqtt_broker_connection_failed"]
[connection signal="received_message" from="MQTT" to="Button" method="_on_mqtt_received_message"]
